end of day July11, added parent sign up, need to work on the database, and making a User(Base) class that doula and parent inherit from

--- a/static/styles2.css
+++ b/static/styles2.css
@@ -34,6 +34,6 @@ dl dd {
 
 
 /*Code below is to make the selected link display as yello instead of black */
-/*.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
 	background-color: yellow;
-}*/
+}
