--- a/templates/sign-up-doula.html
+++ b/templates/sign-up-doula.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-	<h2>Sign Up</h2>
+	<h2>Sign Up as a Doula</h2>
 	{% if error %}<p class="error"><strong>Error:</strong> {{ error }} {% endif %}
 	<form action="signup_doula" enctype="multipart/form-data" method="post">
 		<!--??? what do dl and dd and dt do? ??? -->
