--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,31 @@
 {% block body %}
 
 <div id="index-top-box">
-  <div class="span12">
-  	<h2>Welcome to Birthy Doula App </h2>
+  <div>
+  	<h2>Welcome to DoulaHoop </h2>
   	<p>How will you be using this website?</p>
   </div>
 </div>  
 
-<div class="row" id="index-bottom-box">
-	<div class="span6" id="bottom-box-left">
-  		<div class="jumbotron">
-  			<h3>I'm a parent</h1>
-  			<p>I'm looking for a provider</p>
+<div class="container">
+	<div class="row" id="index-bottom-box">
+		<div class="col-md-6" id="bottom-box-left">
+	  		<a href="/signup_parent">
+	  		<div class="jumbotron">
+	  			<h3>I'm a parent</h1>
+	  			<p>I'm looking for a provider</p>
+			</div>
+			</a>
 		</div>
-	<div class="span6" id="bottom-box-right">
-		<div class="jumbotron">
-			<h3>I'm a provider</h3>
-			<p>I'm looking for parents</p>
+		<div class="col-md-6" id="bottom-box-right">
+			<a href="/signup_doula">
+			<div class="jumbotron">
+				<h3>I'm a provider</h3>
+				<p>I'm looking for parents</p>
+			</div>
+			</a>
 		</div>
- 	</div>
-  
+	</div>  
 </div>
 
 
