--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,10 @@
-{% extends 'bootstrap-base.html' %}
+{% extends 'logged-out-base.html' %}
 
 
 {% block body %}
-	<h2>Log In</h2>
+	<h2>Log In Doula</h2>
 	{% if error %}<p class="error"><strong>Error:</strong> {{ error }} {% endif %}
-	<form action="login" method="post">
+	<form action="/login{% if next %}?next={{ next }}{% endif %}" method="post">
 		<!--??? what do dl and dd and dt do? ??? -->
 		<dl> 
 			<dt>Email:
