--- a/templates/doula-profile.html
+++ b/templates/doula-profile.html
@@ -1,4 +1,4 @@
-{% extends 'bootstrap-base.html' %}
+{% extends 'logged-in-base.html' %}
 
 {% block body %}
 
@@ -25,10 +25,40 @@
   			<h4> Location </h4> Zip: {{ doula.zipcode }}
   		</div>
 
-  		<div class="col-md-3 col-sm-12" id="profile-column-right"> box 3: suggestions area for similar doulas </div>
-  			<div> doula1 </div>
-  			<div> doula2 </div>
-  			<div> doula3 </div>
+  		<div class="col-md-3 col-sm-12" id="profile-column-right">
+        <p>box 3: suggestions area for similar doulas</p>
+  			<div class="doula-suggestion col-md-12 col-sm-4">
+          <div class="col-sm-6" id="suggestion-1-thumb"> 
+            <img width=50 src="/static/images/uploads/AvivaLipkowitz.jpg">
+            <p>doula1</p>
+          </div>
+          <div class="col-sm-6" id="suggestion-1-desc"> 
+            <p>Name</p>
+            <p>location<p>
+          </div>
+        </div>
+
+  			<div class="doula-suggestion col-md-12 col-sm-4">
+          <div class="col-sm-6" id="suggestion-2-thumb"> 
+            <img width=50 src="/static/images/uploads/AvivaLipkowitz.jpg">
+            <p>doula2</p>
+          </div>
+          <div class="col-sm-6" id="suggestion-2-desc"> 
+            <p>Name</p>
+            <p>location<p>
+          </div>
+        </div>
+  			<div class="doula-suggestion col-md-12 col-sm-4">
+          <div class="col-sm-6" id="suggestion-3-thumb"> 
+            <img width=50 src="/static/images/uploads/AvivaLipkowitz.jpg">
+            <p>doula3</p>
+          </div>
+          <div class="col-sm-6" id="suggestion-3-desc"> 
+            <p>Name</p>
+            <p>location<p>
+          </div>
+        </div>
+      </div>
 	</div>
 </div>
 
