--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,10 @@
-{% extends 'bootstrap-base.html' %}
+{% extends 'logged-out-base.html' %}
 
 {% block body %}
 
 <div id="index-top-box">
   <div>
-  	<h2>Welcome to DoulaHoop </h2>
-  	<p>How will you be using this website?</p>
+  	<h2>How will you be using this website?</h2>
   </div>
 </div>  
 
@@ -15,15 +14,15 @@
 	  		<a href="/signup_parent">
 	  		<div class="jumbotron">
 	  			<h3>I'm a parent</h1>
-	  			<p>I'm looking for a provider</p>
+	  			<p>I'm looking for a doula</p>
 			</div>
 			</a>
 		</div>
 		<div class="col-md-6" id="bottom-box-right">
 			<a href="/signup_doula">
 			<div class="jumbotron">
-				<h3>I'm a provider</h3>
-				<p>I'm looking for parents</p>
+				<h3>I'm a doula</h3>
+				<p>I'm looking for clients</p>
 			</div>
 			</a>
 		</div>
