tried to fix the style on the sign-up page, but it got funky at the bottom. need to keep working on it

--- a/templates/sign-up-doula.html
+++ b/templates/sign-up-doula.html
@@ -8,41 +8,80 @@
 		<!--??? what do dl and dd and dt do? ??? -->
 		<!-- Add do this a checklist of the services a doula might provide for doula_services table -->
 		<ul class="signup-list"> 
-			<li class="form-wrap"><div class="form-left">First name:</div>
+			<li class="form-wrap">
+				<div class="form-left">First name:</div>
 				<div class="form-right"><input type="text" name="firstname"></div>
 			</li>
-			<li class="form-wrap"><div class="form-left">Some really long category name:</div>
-				<div class="form-right"><input type="text" name="firstname"></div>
-			</li>
-			<p><dt>Last name: <dd><input type="text" name="lastname"></p>
-			<dt>Name of your practice (if you have one):
-			<dd><input type="text" name="practice">
-			<dt>Email:
-			<dd><input type="email" name="email">
-			<dt>Password:
-			<dd><input type="password" name="password">
-			<dt>Type your password again:
-			<dd><input type="password" name="password_again">
-			<dt>Phone number:
-			<dd><input type="tel" name="phone">
-			<dt>website:
-			<dd><input type="text" name="website">
-			<dt>Price range: From
-			<dd><input type="number" name="price_min">
-			<dt>To:
-			<dd><input type="number" name="price_max">
-			<dt>Give us some background about yourself:
-			<dd><input type="text" name="background" style="width:300px; height:100px">
-			<dt>What services do you provide?
-			<dd><input type="text" name="services" style="width:300px; height:100px">
-			<dt>Zipcode:
-			<dd><input type="text" name="zip">
-			<dt>Upload a profile picture
-			<dd><input type="file" name="image" accept="image/*">
 
-			<dt>
-			<dd><input type="submit" value="Sign Up">
-		</dl>
+			<li class="form-wrap">
+				<div class="form-left">Last name:</div>
+				<div class="form-right"><input type="text" name="lastname"></div>
+			</li>
+
+			<li class="form-wrap">
+				<div class="form-left">Name of your practice (if you have one):</div>
+				<div class="form-right"><input type="text" name="practice"></div>
+			</li>
+
+			<li class="form-wrap">
+				<div class="form-left">Email:</div>
+				<div class="form-right"><input type="email" name="email"></div>
+			</li>
+
+			<li class="form-wrap">
+				<div class="form-left">Password:</div>
+				<div class="form-right"><input type="password" name="password"></div>
+			</li>
+			
+			<li class="form-wrap">
+				<div class="form-left">Confirm password:</div>
+				<div class="form-right"><input type="password" name="password_again"></div>
+			</li>
+			
+			<li class="form-wrap">
+				<div class="form-left">Phone number:</div>
+				<div class="form-right"><input type="tel" name="phone"></div>
+			</li>
+
+			<li class="form-wrap">
+				<div class="form-left">Website:</div>
+				<div class="form-right"><input type="text" name="website"></div>
+			</li>
+
+			<li class="form-wrap">
+				<div class="form-left">Price range: From</div>
+				<div class="form-right"><input type="number" name="price_min"></div>
+			</li>
+
+			<li class="form-wrap">
+				<div class="form-left"> to </div>
+				<div class="form-right"><input type="number" name="price_max"></div>
+			</li>
+
+			<li class="form-wrap">
+				<div class="form-left">Give us some background about yourself:</div>
+				<div class="form-right"><input type="text" name="background" style="width:300px; height:100px"></div>
+			</li>
+
+			<li class="form-wrap">
+				<div class="form-left">What services do you provide? </div>
+				<div class="form-right"><input type="text" name="services" style="width:300px; height:100px"></div>
+			</li>
+			
+			<li class="form-wrap">
+				<div class="form-left">Zipcode:</div>
+				<div class="form-right"><input type="text" name="zip"></div>
+			</li>
+			
+			<li class="form-wrap">
+				<div class="form-left">Upload a profile picture</div>
+				<div class="form-right"><input type="file" name="image" accept="image/*"></div>
+			</li>
+			
+			<li class="form-wrap">
+				<div class="form-left"><input type="submit" value="Sign Up"></div>
+			</li>
+		</ul>
 	</form>
 
 
