--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
 		<!--??? what do dl and dd and dt do? ??? -->
 		<dl> 
 			<dt>Search for doulas by zipcode:
-			<dd><input type="search" name="zip_search" placeholder="zipcode">
+			<dd><input type="search" name="doula_zip_search" placeholder="zipcode">
 			<dd><input type="submit" value="Search">
 		</dl>
 	</form>
