--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends 'logged-out-base.html' %}
 
 {% block body %}
-	<h2>Log In Doula</h2>
+	<h2>Parent Log In</h2>
 	{% if error %}<p class="error"><strong>Error:</strong> {{ error }} {% endif %}
-	<form action="/login{% if next %}?next={{ next }}{% endif %}" method="post">
+	<form action="/parent_login{% if next %}?next={{ next }}{% endif %}" method="post">
 		<!--??? what do dl and dd and dt do? ??? -->
 		<dl> 
 			<dt>Email:
@@ -11,6 +11,20 @@
 			<dt>Password:
 			<dd><input type="password" name="password">
 			<dd><input type="submit" value="Login">
+		</dl>
+	</form>
+
+	<h2>Doula Log In</h2>
+	<form action="/doula_login{% if next %}?next={{ next }}{% endif %}" method="post">
+		<!--??? what do dl and dd and dt do? ??? -->
+		<dl> 
+			<dt>Email:
+			<dd><input type="text" name="email">
+			<dt>Password:
+			<dd><input type="password" name="password">
+			<dd>
+			<dd><input type="submit" value="Login">
+			
 		</dl>
 	</form>
 {% endblock %}
